--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "export": "next export"
   },
   "dependencies": {
-    "next": "latest",
+    "axios": "^0.25.0",
+    "next": "^12.0.9",
     "node-fetch": ">=2.6.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.49.0"
+    "react-router-dom": "^6.2.1",
+    "sass": "^1.49.0",
+    "spotify-web-api-node": "^5.0.2"
+  },
+  "devDependencies": {
+    "@testing-library/react": "^12.1.2",
+    "plop": "^3.0.5"
   }
 }
