--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "classnames": "^2.3.1",
     "next": "^12.0.9",
     "node-fetch": ">=2.6.7",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "^6.2.1",
