--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "^6.2.1",
+    "react-use": "^17.3.2",
     "sass": "^1.49.0",
     "spotify-web-api-node": "^5.0.2"
   },
