--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^6.2.1",
     "react-use": "^17.3.2",
     "sass": "^1.49.0",
-    "spotify-web-api-node": "^5.0.2"
+    "spotify-web-api-node": "^5.0.2",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
