--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "test": "jest",
-    "export": "next export"
+    "export": "next export",
+    "prepare": "husky install"
   },
   "dependencies": {
     "axios": "^0.25.0",
@@ -24,7 +26,18 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
+    "eslint": "8.10.0",
+    "eslint-config-next": "12.1.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": ">=6",
     "jest": "^27.4.7",
-    "plop": "^3.0.5"
+    "lint-staged": ">=10",
+    "plop": "^3.0.5",
+    "prettier": "2.5.1"
+  },
+  "lint-staged": {
+    "*.js": ["eslint --cache --fix", "prettier --write"]
   }
+
 }
