--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
     "test": "jest",
     "export": "next export",
+    "lint": "npx eslint components pages",
+    "lint:fix": "npm run lint -- --fix",
+    "prettier": "npx prettier components pages --check",
+    "prettier:fix": "npm run prettier -- --write",
+    "format": "npm run prettier:fix && npm run lint:fix",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -27,18 +31,16 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
-    "eslint": "8.10.0",
-    "eslint-config-next": "12.1.0",
+    "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.4.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "husky": ">=6",
+    "eslint-plugin-react": "^7.29.2",
+    "husky": "^7.0.4",
     "jest": "^27.4.7",
-    "lint-staged": ">=10",
+    "lint-staged": "^12.3.4",
     "plop": "^3.0.5",
-    "prettier": "2.5.1"
+    "prettier": "^2.5.1"
   },
   "lint-staged": {
-    "*.js": ["eslint --cache --fix", "prettier --write"]
+    "*.{js,jsx,ts,tsx,css,md}": "prettier --write"
   }
-
 }
