--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
     "prettier": "^2.5.1"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,css,md}": "prettier --write"
+    "*.{js,jsx,ts,tsx,css,md}": "prettier"
   }
 }
